log
Fri Apr 22 18:50:58 UTC 2022: 
 tests:  1|8
total_score: 0/70
a11c21e
Fri Apr 22 18:51:21 UTC 2022: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
15b8e32
Fri Apr 22 20:26:39 UTC 2022: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
139d0f0
Fri Apr 22 20:38:23 UTC 2022: 
 treemap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  0|0
c8f4c11
Fri Apr 22 20:39:47 UTC 2022: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
00ac098
Fri Apr 22 20:44:28 UTC 2022: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘minimum’:
treemap.c:84:5: error: expected ‘;’ before ‘return’
     return x;
     ^~~~~~
treemap.c:85:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
f7e8cea
Fri Apr 22 20:44:43 UTC 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:79:10: error: ‘return’ with a value, in function returning void [-Werror]
   return NULL;
          ^~~~
treemap.c:48:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
treemap.c: In function ‘minimum’:
treemap.c:85:5: error: expected ‘;’ before ‘return’
     return x;
     ^~~~~~
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
fec83f6
Fri Apr 22 20:45:04 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘minimum’:
treemap.c:85:5: error: expected ‘;’ before ‘return’
     return x;
     ^~~~~~
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
1de5e15
